<resources>
    <string name="app_name">Proyecto</string>
    <string name="titulo1">Menu</string>
    <string name="btn1">historia de linux</string>
    <string name="bt2">Caracteristicas</string>
    <string name="btn2">Caracteristicas</string>
    <string name="btn3">Como instalar linux</string>
    <string name="btn4">Inmunidad a los virus</string>
    <string name="btn5">Ubuntu</string>
    <string name="btn6">Kubuntu</string>
    <string name="btn7">Debian</string>
    <string name="btnvolver">Volver</string>
    <string name="texto1">Linux, es un sistema operativo. Es una implementación de libre distribución UNIX para computadoras personales (PC), servidores y estaciones de trabajo.  Linux (pronunciación IPA: /´linuks/) es la denominación de un sistema operativo tipo-Unix y el nombre de un núcleo. Es uno de los paradigmas más prominentes del software libre y del desarrollo del código abierto, cuyo código fuente está disponible públicamente, para que cualquier persona puede libremente usarlo, estudiarlo, redistribuirlo y, con los conocimientos informáticos adecuados, modificarlo.  Linux es usado como sistema operativo en una amplia variedad de plataformas de hardware y computadores, incluyendo los computadores de escritorio (PCs x86 y x86-64, y Macintosh y PowerPC), servidores, supercomputadores, mainframes, y dispositivos empotrados así como teléfonos celulares.  En 1983 Richard Stallman fundó el proyecto GNU, con el fin de crear sistemas operativos parecidos a UNIX y compatibles con POSIX. Dos años más tarde creó la \"Fundación del Software Libre\" y escribió la GNU General Public License para posibilitar el software libre en el sistema de copyright.  El software GNU se extendía muy de prisa y dentro de poco una multitud de programas fueron escritos, de manera que ya a principios de 1990 había bastantes software GNU como para hacer un sistema operativo propio, pero faltaba el Kernel. A principios de los años 1990, no había un sistema operativo libre completo. A pesar de que el proyecto GNU era desarrollado constantemente, no disponía sin embargo de ningún buen Kernel basado en UNIX, por el contrario era un número de proyectos de software libres que podían ser traducidos en las variantes UNIX mediante el compilador de GNU.  LINUS BENEDIT TORVALD Linus Benedit Torvalds nació en Helsinki, Finlándia, en el año de 1969. Su abuelo, matemático y estadista le compró un Comodore en 1980 y fue quien \"enganchó\" a Linus al mundo de los computadores.  En 1988 Linus Torvalds entrá a la Universidad. Ese mismo año fue cuando el sistema operativo didáctico, basado en UNIX y creado por Andy Tannenbaum, empezó a cobrar importáncia. Dicho sistema era el Minix.  Linus entró a formar parte de la comunidad de usuarios Minix. Andy Tannenbaum cometió un error en su sistema operativo. Era demasiado limitado, tanto técnicamente como politícamente, en ningún momento tuvo en cuenta la posibilidad de incluir Minix al proyecto GNU. La creación de Andy Tannenbaum estaba pensando para ser distribuida. Su primer error fue ceder todos sus derechos a Prentice Hall, que empezó a cobrar 150 dólares por licencia.  Así, Linus tomó la decisión de cambiar esta política debido a que el sistema Minix era ideal para los estudiantes de sistemas operativos, y su precio era considerablemente alto.  Año 1991, cuando Linus se acabó de comprar su primer 386, la intención era crear un nuevo Kernel (al que porteriormente llamaría Linux) de UNIX basado en el Kernel de Minix y modificarlo periódicamente de manera que fuera capaz de ejecutar aplicaciones GNU.  La historia de Linux está fuertemente vinculada a la del proyecto GNU. Hacia 1991, cuando la primera versión del núcleo Linux fue liberada, el proyecto GNU había producido varios de los componentes del sistema operativo, incluyendo un intérprete de comandos, una biblioteca C y un compilador, pero aún no contaba con el núcleo que permitiera complementar el sistema operativo. Entonces, el núcleo creado por Linus Torvalds, llenó el hueco final que el sistema operativo GNU exigía.  Linus nunca anunció la versión 0.01 de Linux (agosto 1991), esta versión no era ejecutable, solamente incluía los principios del nucleo del sistema, estaba escrita en lenguaje ensamblador y asumía que uno tenía acceso a un sistema Minix para su compilación.  El 5 de octubre de 1991, Linus anuncio la primera versión \"Oficial\" de Linux, - versión 0.02. Con esta versión Linus pudo ejecutar Bash (GNU Bourne Again Shell) y gcc (Compilador GNU de C) pero no mucho mas funcionaba. En este estado de desarrollo ni se pensaba en los terminos soporte, documentacion, distribución. Después de la versión 0.03, Linus salto en la numeración hasta la 0.10, más programadores a lo largo y ancho del internet empezaron a trabajar en el proyecto y después de revisiones, Linus incremento el numero de version hasta la 0.95 (marzo 1992). En Diciembre de 1993 el nucleo del sistema estaba en la versión 0.99 y la versión 1.0, llego el 14 de marzo de 1994.  Linux se refiere estrictamente al núcleo Linux, pero es comúnmente utilizado para describir al sistema operativo tipo Unix (que implementa el estándar POSIX), que utiliza primordialmente filosofía y metodologías libres (también conocido como GNU/Linux) y que está formado mediante la combinación del núcleo Linux con las bibliotecas y herramientas del proyecto GNU y de muchos otros proyectos/grupos de software (libre o no libre). La expresión \"Linux\" es utilizada para referirse a las distribuciones GNU/Linux, colecciones de software que suelen contener grandes cantidades de paquetes además del núcleo. El software que suelen incluir consta de una enorme variedad de aplicaciones, como: entornos gráficos, suites ofimáticas, servidores web, servidores de correo, servidores FTP, etcétera. Coloquialmente se aplica el término \"Linux\" a éstas. Algunas personas opinan que es incorrecto denominarlas distribuciones Linux, y proponen llamarlas sistema GNU/Linux. Otras personas opinan que los programas incluidos proceden de fuentes tan variadas que proponen simplificarlo denominándolo simplemente a \"Linux\". Pronunciación: /lí.nuks/, no /lái.nuks/</string>
    <string name="titulo2">Linux es un sistema operativo fácil de instalar, tan solo basta con descargar la imagen iso de una distribución como Debian, SuSE, Ubuntu o Yellow Dog (la mayoría son gratuitas) y grabarla en un CD o DVD.  Existen versiones linux para máquinas x86 (abarca desde computadoras 386, pentium I, celeron, hasta pentium IV), también para 64 bits (los nuevos procesadores, aunque también trabajan con linux para x86), y para procesadores PowerPc (ppc) de las computadoras Apple Macintosh.  El resto es tan fácil como instalar Windows, incluso algunas distrubiciones permiten entrar al escritorio linux sin necesidad de instalar el sistema operativo (desde el CD), para luego usarlo o instalarlo desde el escritorio. Este es el caso de Ubuntu y Kubuntu y las versiones más actualizadas, insertas el cd/dvd dentro de la computadora, reinicias y en uno o dos minutos estás en el escritorio del sistema operativo Linux. Estas versiones son también llamadas Live, del inglés \"en vivo\".  Actualmente Linux es un sistema fácil de usar. Cada distribución trae programas seleccionados por los autores de la distribución incluidos en el cd o en el dvd, y se pueden instalar tanto al comienzo de la instalación como luego de haber instalado el sistema.  Linux es una muy buena alternativa frente a los demás sistemas operativos. Más allá de las ventajas evidentes de costo, ofrece algunas características muy notables. En comparación con las otras versiones de Unix para PC, la velocidad y confiabilidad de Linux son muy superiores. Entre otras razones se debe a su estabilidad, al acceso a las fuentes, a la independencia del proveedor, a la seguridad, rapidez con que incorpora los nuevos adelantos tecnológicos (Ipv6, microprocesadores de 64 bits), a la escalabilidad (se pueden crear clusters de cientos de computadoras), a la activa comunidad de desarrollo que hay a su alrededor, a su interoperatibilidad y a la abundancia de documentación relativa a los procedimientos.  Hay varias empresas que comercializan soluciones basadas en Linux: IBM, Novell, Red Hat, Rxart, Cannonical (Ubuntu), Rxart, así como miles de PYMES que ofrecen productos o servicios basados en esta tecnología.  La marca Linux (Número de serie: 1916230) pertenece a Linus Torvalds y se define como \"un sistema operativo para computadoras que facilita su uso y operación\"</string>
    <string name="btn8">Fedora</string>
    <string name="btn9">Linux Mint</string>
    <string name="btn10">ventajas y desventajas</string>
    <string name="texto10">2. Características de los Sistemas Linux Linux es un Sistema Operativo tipo Unix diseñado para aprovechar al máximo las capacidades de las computadoras PC basadas en el microprocesador i386 y posteriores. Es un SO con capacidades de multiprocesamiento, multitarea y multiusuario. Sin embargo, a diferencia de otros sistemas Unix para PC, usted no tiene que pagar cuantiosas licencias por el uso de Linux.  2.1 Multitarea Describe la habilidad de ejecutar, aparentemente al mismo tiempo, numerosos programas sin obstaculizar la ejecución de cada aplicación. Esto se conoce como multitarea preferente, porque cada programa tiene garantizada la posibilidad de correr. Windows no soporta multitarea preferente, sólo la llamada multitarea cooperativa, bajo la cual los programas corren hasta que ellos mismos permiten la ejecución de otro programa o no tienen otra que hacer durante ese período.  2.2 Multiusuario El concepto de que numerosos usuarios pudieran accesar aplicaciones o el potencial de procesamiento en una sola PC era un mero sueño hace unos cuantos años. Linux permite que más de una sola persona pueda trabajar en la misma versión de la misma aplicación de manera simultánea, desde las mismas terminales, o en terminales separadas.  2.3 Redes y Telecomunicaciones La superioridad de Linux sobre otros sistemas operativos es evidente en sus utilerías para redes y comunicaciones. Ningún otro sistema operativo incluye capacidades para red tan estrechamente acopladas. Linux soporta las siguientes interfaces de red: ethernet, fddi, token ring, arcnet, X.25, ISDN, líneas seriales síncronas y asíncronas.  2.4 Internet Con Linux usted puede conectarse a Internet y al vasto mundo de información que esta red abarca. Correo Electrónico, Listas de Correo, Grupos de Interés, Búsqueda y Transferencia de Archivos, Gopher, WAIS, y por supuesto, World Wide Web.  2.5 Interconectividad Usted puede conectar Linux a una red local, y convertirlo en servidor para MS-DOS, Windows, Windows para Trabajo en Grupo (WfW), Windows 95 y Macintosh por un costo muy por debajo de otros sistemas comerciales.  2.6 Programación Linux cuenta con un conjunto poderoso de herramientas para el desarrollo de programas: C, C++, ObjectiveC, Pascal, Fortran, BASIC, CLISP, SmallTalk, Ada, Perl, así como depuradores y bibliotecas compartidas de enlace dinámico (DLL).  2.7 Portabilidad Linux fue diseñado teniendo en cuenta la portabilidad de las aplicaciones. Linux es compatible con diversos estándares Unix, tales como System V, BSD y los estándares internacionales IEEE POSIX.1 e IEEE POSIX.2, facilitando el desarrollo de aplicaciones para múltiples plataformas.  2.8 Ambiente Gráfico Linux proporciona la capacidad de ejecutar aplicaciones gráficas mediante una red heterogénea al incorporar la revisión 6 del estándar X11 del MIT, conocido también simplemente como X-Window. Con el hardware adecuado, las Estaciones de Trabajo Linux son una alternativa de bajo costo a las Estaciones de Trabajo de alto rendimiento.  2.9 Poder RISC Si su organización necesita verdadero poder de cómputo Linux corre en computadoras basadas en microprocesadores RISC como Alpha AXP, Sparc, PowerPC y MIPS. �Ningún otro sistema operativo soporta una gama tan amplia de plataformas.</string>
</resources>